--- a/index.html
+++ b/index.html
@@ -360,7 +360,7 @@
                     </ul>
                 </address>
                </div>
-               <div class="footer-container-right">
+               <div class="footer-container-middle">
                 <p class="action-text">ПРИСОЕДИНЯЙТЕСЬ</p>
                         <ul class="footer-social-list list">
                             <li class="footer-social-list-item">
@@ -393,12 +393,26 @@
                             </li>
                         </ul>               
                 </div>
-
+                <div class="footer-container-right">
+                    <p class="action-text footer-action-text">Подпишитесь на рассылку</p>
+                    <form class="footer-distibution-list-form">
+                        <input 
+                        class="footer-distibution-list-input"
+                        type="email"
+                        name="user_email" 
+                        placeholder="E-mail">
+                        <button class="footer-distibution-list-btn" type="submit">Подписаться
+                            <svg class="footer-distibution-list-icon" width="24" height="24">
+                                <use href="./images/icons.svg#icon-send" ></use>
+                            </svg>
+                        </button>       
+                    </form>
+                </div>
            </div>
 	   </footer>
-        <div class="backdrop " data-modal>
+        <div class="backdrop is-hidden" data-modal>
             <div class="modal">
-                <button type="button" class="modal-close-btn" data-modal-close>
+                <button class="modal-close-btn" type="button"  data-modal-close>
                     <svg class="modal-close-btn-icon" width="18" height="18">
                         <use href="./images/icons.svg#icon-close"></use>
                     </svg>
@@ -407,43 +421,64 @@
                     <p class="contact-form-action">Оставьте свои данные, мы вам перезвоним</p>
                     <label class="contact-form-field">
                         <span class="contact-form-field-name">Имя</span>
-                        <input 
-                        class="contact-form-input" 
-                        type="text" 
-                        name="user_name" 
-                        minlength="2" >
+                        <div class="contact-form-input-wrapper">
+                            <input 
+                                class="contact-form-input" 
+                                type="text" 
+                                name="user_name" 
+                                minlength="2"
+                            >
+                            <svg class="contact-form-icon" width="18" height="18">
+                                <use href="./images/icons.svg#person-modal"></use>
+                            </svg>
+                        </div>    
                     </label>
                     <label class="contact-form-field">
                         <span class="contact-form-field-name">Телефон</span>
-                        <input 
-                        class="contact-form-input" 
-                        type="tel" 
-                        name="user_phone_number" 
-                        pattern="[0-9]{3}-[0-9]{3}-[0-9]{2}-[0-9]{2}" 
-                        title="xxx-xxx-xx-xx">
+                        <div class="contact-form-input-wrapper">
+                            <input 
+                                class="contact-form-input" 
+                                type="tel" 
+                                name="user_phone_number" 
+                                pattern="[0-9]{3}-[0-9]{3}-[0-9]{2}-[0-9]{2}" 
+                                title="xxx-xxx-xx-xx">
+                            <svg class="contact-form-icon" width="18" height="18">
+                                <use href="./images/icons.svg#phone-modal"></use>
+                            </svg>
+                        </div>
                     </label>
                     <label class="contact-form-field">
                         <span class="contact-form-field-name">Почта</span>
-                        <input 
-                        class="contact-form-input" 
-                        type="email"
-                        name="user_email">
+                        <div class="contact-form-input-wrapper">
+                            <input 
+                                class="contact-form-input" 
+                                type="email"
+                                name="user_email">
+                            <svg class="contact-form-icon" width="18" height="18">
+                                <use href="./images/icons.svg#email-modal"></use>
+                            </svg>
+                        </div>
                     </label>
                     <label class="contact-form-field">
                         <span class="contact-form-field-name">Комментарий</span>
                         <textarea 
                         class="contact-form-message"
                         name="user_message"
-                        placeholder="Введите текст" 
-                        ></textarea>
+                        placeholder="Введите текст">
+                        </textarea>
                     </label>  
                     <input 
-                    class="contact-form-checkbox"
-                    type="checkbox"
-                    name="user_policy">
-                    <label for="">Соглашаюсь с рассылкой и принимаю <a class="contact-form-checkbox-link" href="">Условия договора</a> 
+                        class="contact-form-checkbox visually-hidden"
+                        id="checkbox-policy"
+                        type="checkbox"
+                        name="user_policy"
+                        required >
+                        
+                    <label class="contact-form-checkbox-label" for="checkbox-policy">
+                        Соглашаюсь с рассылкой и принимаю&nbsp;
+                        <a class="contact-form-checkbox-link" href="">Условия договора</a> 
                     </label>
-                    <button class="contact-form-btn type="submit"">Отправить</button>
+                    <button class="contact-form-btn" type="submit">Отправить</button>
                 </form>
             </div>
         </div>
@@ -452,4 +487,3 @@
    </body>
 </html>
 
-is-hidden
