--- a/portfolio.html
+++ b/portfolio.html
@@ -234,7 +234,7 @@
 					</ul>
 				</address>
 			</div>
-			<div class="footer-container-right">
+			<div class="footer-container-middle">
 				<p class="action-text">ПРИСОЕДИНЯЙТЕСЬ</p>
 				<ul class="footer-social-list list">
 					<li class="footer-social-list-item">
@@ -267,7 +267,17 @@
 					</li>
 				</ul>
 			</div>
-	
+				<div class="footer-container-right">
+					<p class="action-text footer-action-text">Подпишитесь на рассылку</p>
+					<form class="footer-distibution-list-form">
+						<input class="footer-distibution-list-input" type="email" name="user_email" placeholder="E-mail">
+						<button class="footer-distibution-list-btn" type="submit">Подписаться
+							<svg class="footer-distibution-list-icon" width="24" height="24">
+								<use href="./images/icons.svg#icon-send"></use>
+							</svg>
+						</button>
+					</form>
+				</div>
 		</div>
 	</footer>
 </body>
