--- a/index.html
+++ b/index.html
@@ -421,7 +421,7 @@
                     <p class="contact-form-action">Оставьте свои данные, мы вам перезвоним</p>
                     <label class="contact-form-field">
                         <span class="contact-form-field-name">Имя</span>
-                        <div class="contact-form-input-wrapper">
+                        <span class="contact-form-input-wrapper">
                             <input 
                                 class="contact-form-input" 
                                 type="text" 
@@ -431,11 +431,11 @@
                             <svg class="contact-form-icon" width="18" height="18">
                                 <use href="./images/icons.svg#person-modal"></use>
                             </svg>
-                        </div>    
+                        </span>    
                     </label>
                     <label class="contact-form-field">
                         <span class="contact-form-field-name">Телефон</span>
-                        <div class="contact-form-input-wrapper">
+                        <span class="contact-form-input-wrapper">
                             <input 
                                 class="contact-form-input" 
                                 type="tel" 
@@ -445,11 +445,11 @@
                             <svg class="contact-form-icon" width="18" height="18">
                                 <use href="./images/icons.svg#phone-modal"></use>
                             </svg>
-                        </div>
+                        </span>
                     </label>
                     <label class="contact-form-field">
                         <span class="contact-form-field-name">Почта</span>
-                        <div class="contact-form-input-wrapper">
+                        <span class="contact-form-input-wrapper">
                             <input 
                                 class="contact-form-input" 
                                 type="email"
@@ -457,7 +457,7 @@
                             <svg class="contact-form-icon" width="18" height="18">
                                 <use href="./images/icons.svg#email-modal"></use>
                             </svg>
-                        </div>
+                        </span>
                     </label>
                     <label class="contact-form-field">
                         <span class="contact-form-field-name">Комментарий</span>
